--- a/反欺诈详情.html
+++ b/反欺诈详情.html
@@ -200,7 +200,7 @@
         <div id="u1225" class="ax_default box_2" selectiongroup="u1192二级菜单">
           <div id="u1225_div" class=""></div>
           <div id="u1225_text" class="text ">
-            <p><span>欺诈报表</span></p>
+            <p><span>数据应用报表</span></p>
           </div>
         </div>
 
@@ -631,13 +631,13 @@
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u1299" class="ax_default" data-left="240" data-top="307" data-width="117" data-height="319">
+        <div id="u1299" class="ax_default" data-left="240" data-top="307" data-width="151" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u1300" class="ax_default shape">
             <div id="u1300_div" class=""></div>
             <div id="u1300_text" class="text ">
-              <p><span>APP名称</span></p>
+              <p><span>APP/获客计划名称</span></p>
             </div>
           </div>
 
@@ -645,7 +645,7 @@
           <div id="u1301" class="ax_default shape">
             <div id="u1301_div" class=""></div>
             <div id="u1301_text" class="text ">
-              <p><span>A</span></p><p><span>B</span></p><p><span>C</span></p><p><span>D</span></p><p><span>E</span></p>
+              <p><span>A</span></p><p><span>A-1</span></p><p><span>A-2</span></p><p><span>B</span></p><p><span>C</span></p>
             </div>
           </div>
         </div>
@@ -769,6 +769,26 @@
           <!-- Unnamed (倒三角形) -->
           <div id="u1321" class="ax_default shape">
             <img id="u1321_img" class="img " src="images/数据应用报表（欺诈报表）/u1007.png"/>
+          </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (组合 ) -->
+      <div id="u1322" class="ax_default" data-left="240" data-top="381" data-width="18" data-height="11">
+
+        <!-- Unnamed (矩形) -->
+        <div id="u1323" class="ax_default iconfont">
+          <img id="u1323_img" class="img " src="images/反欺诈详情/u1323.png"/>
+          <div id="u1323_text" class="text ">
+            <p><span></span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u1324" class="ax_default box_2">
+          <div id="u1324_div" class=""></div>
+          <div id="u1324_text" class="text ">
+            <p><span>8</span></p>
           </div>
         </div>
       </div>
