--- a/管理员报表（反欺诈beta_.html
+++ b/管理员报表（反欺诈beta_.html
@@ -200,7 +200,7 @@
         <div id="u693" class="ax_default box_2" selectiongroup="u660二级菜单">
           <div id="u693_div" class=""></div>
           <div id="u693_text" class="text ">
-            <p><span>欺诈报表</span></p>
+            <p><span>数据应用报表</span></p>
           </div>
         </div>
 
