--- a/数据应用报表（欺诈报表）.html
+++ b/数据应用报表（欺诈报表）.html
@@ -200,7 +200,7 @@
         <div id="u987" class="ax_default box_2" selectiongroup="u954二级菜单">
           <div id="u987_div" class=""></div>
           <div id="u987_text" class="text ">
-            <p><span>欺诈报表</span></p>
+            <p><span>数据应用报表</span></p>
           </div>
         </div>
 
