--- a/管理员报表_（反欺诈1_0）.html
+++ b/管理员报表_（反欺诈1_0）.html
@@ -200,7 +200,7 @@
         <div id="u848" class="ax_default box_2" selectiongroup="u815二级菜单">
           <div id="u848_div" class=""></div>
           <div id="u848_text" class="text ">
-            <p><span>欺诈报表</span></p>
+            <p><span>数据应用报表</span></p>
           </div>
         </div>
 
