--- a/指标说明.html
+++ b/指标说明.html
@@ -309,7 +309,7 @@
           <div id="u1896" class="ax_default label">
             <div id="u1896_div" class=""></div>
             <div id="u1896_text" class="text ">
-              <p><span style="font-family:'Microsoft Tai Le';">1. </span><span style="font-family:'PingFangSC-Regular', 'PingFang SC';">基本内容示例</span></p>
+              <p><span style="font-family:'Microsoft Tai Le';">1. </span><span style="font-family:'PingFang SC Regular', 'PingFang SC';">基本内容示例</span></p>
             </div>
           </div>
         </div>
