--- a/数据应用报表（欺诈报表）.html
+++ b/数据应用报表（欺诈报表）.html
@@ -256,7 +256,7 @@
           <div id="u998" class="ax_default box_1">
             <div id="u998_div" class=""></div>
             <div id="u998_text" class="text ">
-              <p><span style="font-family:'PingFangSC-Regular', 'PingFang SC';">今日请求量&nbsp; &nbsp; </span><span style="font-family:'Arial Normal', 'Arial';">12,423</span></p>
+              <p><span style="font-family:'PingFang SC Regular', 'PingFang SC';">今日请求量&nbsp; &nbsp; </span><span style="font-family:'Arial Normal', 'Arial';">12,423</span></p>
             </div>
           </div>
 
@@ -340,7 +340,7 @@
           <div id="u1012" class="ax_default box_1">
             <div id="u1012_div" class=""></div>
             <div id="u1012_text" class="text ">
-              <p><span style="font-family:'PingFangSC-Regular', 'PingFang SC';">今日请求量&nbsp; &nbsp; </span><span style="font-family:'Arial Normal', 'Arial';">12,423</span></p>
+              <p><span style="font-family:'PingFang SC Regular', 'PingFang SC';">今日请求量&nbsp; &nbsp; </span><span style="font-family:'Arial Normal', 'Arial';">12,423</span></p>
             </div>
           </div>
 
@@ -424,7 +424,7 @@
           <div id="u1026" class="ax_default box_1">
             <div id="u1026_div" class=""></div>
             <div id="u1026_text" class="text ">
-              <p><span style="font-family:'PingFangSC-Regular', 'PingFang SC';">今日请求量&nbsp; &nbsp; </span><span style="font-family:'Arial Normal', 'Arial';">12,423</span></p>
+              <p><span style="font-family:'PingFang SC Regular', 'PingFang SC';">今日请求量&nbsp; &nbsp; </span><span style="font-family:'Arial Normal', 'Arial';">12,423</span></p>
             </div>
           </div>
 
