--- a/关系图谱beta.html
+++ b/关系图谱beta.html
@@ -531,7 +531,7 @@
               <div id="u2091" class="ax_default box_1">
                 <div id="u2091_div" class=""></div>
                 <div id="u2091_text" class="text ">
-                  <p><span>&nbsp;全行业</span></p>
+                  <p><span>全平台</span></p>
                 </div>
               </div>
             </div>
