--- a/管理员报表（反欺诈beta_.html
+++ b/管理员报表（反欺诈beta_.html
@@ -601,10 +601,10 @@
       </div>
 
       <!-- Unnamed (组合 ) -->
-      <div id="u759" class="ax_default" data-left="238" data-top="363" data-width="1625" data-height="319">
+      <div id="u759" class="ax_default" data-left="238" data-top="363" data-width="1627" data-height="319">
 
         <!-- Unnamed (组合 ) -->
-        <div id="u760" class="ax_default" data-left="238" data-top="363" data-width="1625" data-height="319">
+        <div id="u760" class="ax_default" data-left="238" data-top="363" data-width="1627" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u761" class="ax_default shape">
@@ -638,13 +638,13 @@
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u767" class="ax_default" data-left="362" data-top="363" data-width="117" data-height="319">
+        <div id="u767" class="ax_default" data-left="238" data-top="363" data-width="98" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u768" class="ax_default shape">
             <div id="u768_div" class=""></div>
             <div id="u768_text" class="text ">
-              <p><span>在黑名单数</span></p>
+              <p><span>APP名称</span></p>
             </div>
           </div>
 
@@ -652,44 +652,44 @@
           <div id="u769" class="ax_default shape">
             <div id="u769_div" class=""></div>
             <div id="u769_text" class="text ">
-              <p><span>29.6万</span></p><p><span>29.6万</span></p><p><span>29.6万</span></p><p><span>29.6万</span></p><p><span>29.6万</span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (图片 ) -->
-          <div id="u770" class="ax_default image">
-            <img id="u770_img" class="img " src="images/管理员报表（反欺诈beta_/u770.png"/>
-          </div>
-        </div>
-
-        <!-- Unnamed (组合 ) -->
-        <div id="u771" class="ax_default" data-left="238" data-top="363" data-width="117" data-height="319">
-
-          <!-- Unnamed (矩形) -->
-          <div id="u772" class="ax_default shape">
-            <div id="u772_div" class=""></div>
-            <div id="u772_text" class="text ">
-              <p><span>APP名称</span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (矩形) -->
-          <div id="u773" class="ax_default shape">
-            <div id="u773_div" class=""></div>
-            <div id="u773_text" class="text ">
               <p><span>A</span></p><p><span>B</span></p><p><span>C</span></p><p><span>D</span></p><p><span>E</span></p>
             </div>
           </div>
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u774" class="ax_default" data-left="479" data-top="363" data-width="131" data-height="319">
+        <div id="u770" class="ax_default" data-left="334" data-top="363" data-width="108" data-height="319">
+
+          <!-- Unnamed (矩形) -->
+          <div id="u771" class="ax_default shape">
+            <div id="u771_div" class=""></div>
+            <div id="u771_text" class="text ">
+              <p><span>合计请求数</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u772" class="ax_default shape">
+            <div id="u772_div" class=""></div>
+            <div id="u772_text" class="text ">
+              <p><span>29.6万</span></p><p><span>29.6万</span></p><p><span>29.6万</span></p><p><span>29.6万</span></p><p><span>29.6万</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (图片 ) -->
+          <div id="u773" class="ax_default image">
+            <img id="u773_img" class="img " src="images/管理员报表（反欺诈beta_/u773.png"/>
+          </div>
+        </div>
+
+        <!-- Unnamed (组合 ) -->
+        <div id="u774" class="ax_default" data-left="440" data-top="363" data-width="139" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u775" class="ax_default shape">
             <div id="u775_div" class=""></div>
             <div id="u775_text" class="text ">
-              <p><span>合计独立请求数</span></p>
+              <p><span>设备评级（优）</span></p>
             </div>
           </div>
 
@@ -703,18 +703,18 @@
 
           <!-- Unnamed (图片 ) -->
           <div id="u777" class="ax_default image">
-            <img id="u777_img" class="img " src="images/管理员报表（反欺诈beta_/u770.png"/>
+            <img id="u777_img" class="img " src="images/管理员报表（反欺诈beta_/u773.png"/>
           </div>
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u778" class="ax_default" data-left="610" data-top="363" data-width="117" data-height="319">
+        <div id="u778" class="ax_default" data-left="577" data-top="363" data-width="139" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u779" class="ax_default shape">
             <div id="u779_div" class=""></div>
             <div id="u779_text" class="text ">
-              <p><span>合计请求数</span></p>
+              <p><span>设备评级（良）</span></p>
             </div>
           </div>
 
@@ -728,18 +728,18 @@
 
           <!-- Unnamed (图片 ) -->
           <div id="u781" class="ax_default image">
-            <img id="u781_img" class="img " src="images/管理员报表（反欺诈beta_/u770.png"/>
+            <img id="u781_img" class="img " src="images/管理员报表（反欺诈beta_/u773.png"/>
           </div>
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u782" class="ax_default" data-left="727" data-top="363" data-width="133" data-height="319">
+        <div id="u782" class="ax_default" data-left="869" data-top="363" data-width="139" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u783" class="ax_default shape">
             <div id="u783_div" class=""></div>
             <div id="u783_text" class="text ">
-              <p><span>设备评级（优）</span></p>
+              <p><span>设备评级（差）</span></p>
             </div>
           </div>
 
@@ -753,18 +753,18 @@
 
           <!-- Unnamed (图片 ) -->
           <div id="u785" class="ax_default image">
-            <img id="u785_img" class="img " src="images/管理员报表（反欺诈beta_/u770.png"/>
+            <img id="u785_img" class="img " src="images/管理员报表（反欺诈beta_/u773.png"/>
           </div>
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u786" class="ax_default" data-left="860" data-top="363" data-width="133" data-height="319">
+        <div id="u786" class="ax_default" data-left="1004" data-top="363" data-width="170" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u787" class="ax_default shape">
             <div id="u787_div" class=""></div>
             <div id="u787_text" class="text ">
-              <p><span>设备评级（良）</span></p>
+              <p><span>设备评级（error）</span></p>
             </div>
           </div>
 
@@ -778,18 +778,18 @@
 
           <!-- Unnamed (图片 ) -->
           <div id="u789" class="ax_default image">
-            <img id="u789_img" class="img " src="images/管理员报表（反欺诈beta_/u770.png"/>
+            <img id="u789_img" class="img " src="images/管理员报表（反欺诈beta_/u773.png"/>
           </div>
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u790" class="ax_default" data-left="993" data-top="363" data-width="133" data-height="319">
+        <div id="u790" class="ax_default" data-left="1292" data-top="363" data-width="145" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u791" class="ax_default shape">
             <div id="u791_div" class=""></div>
             <div id="u791_text" class="text ">
-              <p><span>设备评级（差）</span></p>
+              <p><span>IP评级（正常）</span></p>
             </div>
           </div>
 
@@ -803,18 +803,18 @@
 
           <!-- Unnamed (图片 ) -->
           <div id="u793" class="ax_default image">
-            <img id="u793_img" class="img " src="images/管理员报表（反欺诈beta_/u770.png"/>
+            <img id="u793_img" class="img " src="images/管理员报表（反欺诈beta_/u773.png"/>
           </div>
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u794" class="ax_default" data-left="1126" data-top="363" data-width="163" data-height="319">
+        <div id="u794" class="ax_default" data-left="1435" data-top="363" data-width="145" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u795" class="ax_default shape">
             <div id="u795_div" class=""></div>
             <div id="u795_text" class="text ">
-              <p><span>设备评级（error）</span></p>
+              <p><span>IP评级（一般）</span></p>
             </div>
           </div>
 
@@ -828,18 +828,18 @@
 
           <!-- Unnamed (图片 ) -->
           <div id="u797" class="ax_default image">
-            <img id="u797_img" class="img " src="images/管理员报表（反欺诈beta_/u770.png"/>
+            <img id="u797_img" class="img " src="images/管理员报表（反欺诈beta_/u773.png"/>
           </div>
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u798" class="ax_default" data-left="1289" data-top="363" data-width="139" data-height="319">
+        <div id="u798" class="ax_default" data-left="1577" data-top="363" data-width="145" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u799" class="ax_default shape">
             <div id="u799_div" class=""></div>
             <div id="u799_text" class="text ">
-              <p><span>IP评级（正常）</span></p>
+              <p><span>IP评级（可疑）</span></p>
             </div>
           </div>
 
@@ -853,18 +853,18 @@
 
           <!-- Unnamed (图片 ) -->
           <div id="u801" class="ax_default image">
-            <img id="u801_img" class="img " src="images/管理员报表（反欺诈beta_/u770.png"/>
+            <img id="u801_img" class="img " src="images/管理员报表（反欺诈beta_/u773.png"/>
           </div>
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u802" class="ax_default" data-left="1428" data-top="363" data-width="139" data-height="319">
+        <div id="u802" class="ax_default" data-left="1720" data-top="363" data-width="145" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u803" class="ax_default shape">
             <div id="u803_div" class=""></div>
             <div id="u803_text" class="text ">
-              <p><span>IP评级（一般）</span></p>
+              <p><span>IP评级（error）</span></p>
             </div>
           </div>
 
@@ -878,18 +878,18 @@
 
           <!-- Unnamed (图片 ) -->
           <div id="u805" class="ax_default image">
-            <img id="u805_img" class="img " src="images/管理员报表（反欺诈beta_/u770.png"/>
+            <img id="u805_img" class="img " src="images/管理员报表（反欺诈beta_/u773.png"/>
           </div>
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u806" class="ax_default" data-left="1567" data-top="363" data-width="139" data-height="319">
+        <div id="u806" class="ax_default" data-left="713" data-top="363" data-width="157" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u807" class="ax_default shape">
             <div id="u807_div" class=""></div>
             <div id="u807_text" class="text ">
-              <p><span>IP评级（可疑）</span></p>
+              <p><span>设备评级（一般）</span></p>
             </div>
           </div>
 
@@ -903,18 +903,18 @@
 
           <!-- Unnamed (图片 ) -->
           <div id="u809" class="ax_default image">
-            <img id="u809_img" class="img " src="images/管理员报表（反欺诈beta_/u770.png"/>
+            <img id="u809_img" class="img " src="images/管理员报表（反欺诈beta_/u773.png"/>
           </div>
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u810" class="ax_default" data-left="1706" data-top="363" data-width="139" data-height="319">
+        <div id="u810" class="ax_default" data-left="1172" data-top="363" data-width="122" data-height="319">
 
           <!-- Unnamed (矩形) -->
           <div id="u811" class="ax_default shape">
             <div id="u811_div" class=""></div>
             <div id="u811_text" class="text ">
-              <p><span>IP评级（error）</span></p>
+              <p><span>在黑名单数</span></p>
             </div>
           </div>
 
@@ -928,7 +928,7 @@
 
           <!-- Unnamed (图片 ) -->
           <div id="u813" class="ax_default image">
-            <img id="u813_img" class="img " src="images/管理员报表（反欺诈beta_/u770.png"/>
+            <img id="u813_img" class="img " src="images/管理员报表（反欺诈beta_/u773.png"/>
           </div>
         </div>
       </div>
