--- a/app添加标签组件.html
+++ b/app添加标签组件.html
@@ -38,7 +38,7 @@
       <div id="u1924" class="ax_default box_1">
         <img id="u1924_img" class="img " src="images/app添加标签组件/u1924.png"/>
         <div id="u1924_text" class="text ">
-          <p><span style="color:#FF0000;">*</span><span> APP映像</span></p>
+          <p><span style="color:#FF0000;">*</span><span> APP印象</span></p>
         </div>
       </div>
 
@@ -759,6 +759,14 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u2005" class="ax_default box_1">
+        <img id="u2005_img" class="img " src="images/app添加标签组件/u2005.png"/>
+        <div id="u2005_text" class="text ">
+          <p><span>最少选择三项</span></p>
         </div>
       </div>
     </div>
