--- a/数据应用报表（欺诈报表）.html
+++ b/数据应用报表（欺诈报表）.html
@@ -772,7 +772,7 @@
           <div id="u1084" class="ax_default box_1">
             <div id="u1084_div" class=""></div>
             <div id="u1084_text" class="text ">
-              <p><span>获客计划被拦截排名</span></p>
+              <p><span>获客计划/对手APP被拦截排名</span></p>
             </div>
           </div>
 
@@ -788,7 +788,7 @@
           <div id="u1086" class="ax_default box_1">
             <div id="u1086_div" class=""></div>
             <div id="u1086_text" class="text ">
-              <p><span>工专路一号店</span></p>
+              <p><span>双11计划</span></p>
             </div>
           </div>
 
@@ -812,7 +812,7 @@
           <div id="u1089" class="ax_default box_1">
             <div id="u1089_div" class=""></div>
             <div id="u1089_text" class="text ">
-              <p><span>工专路二号店</span></p>
+              <p><span>双12计划</span></p>
             </div>
           </div>
 
@@ -836,7 +836,7 @@
           <div id="u1092" class="ax_default box_1">
             <div id="u1092_div" class=""></div>
             <div id="u1092_text" class="text ">
-              <p><span>工专路三号店</span></p>
+              <p><span>双11计划</span></p>
             </div>
           </div>
 
@@ -860,7 +860,7 @@
           <div id="u1095" class="ax_default box_1">
             <div id="u1095_div" class=""></div>
             <div id="u1095_text" class="text ">
-              <p><span>工专路四号店</span></p>
+              <p><span>双11计划</span></p>
             </div>
           </div>
 
@@ -964,7 +964,7 @@
           <div id="u1108" class="ax_default box_1">
             <div id="u1108_div" class=""></div>
             <div id="u1108_text" class="text ">
-              <p><span>途虎</span></p>
+              <p><span>KEEP</span></p>
             </div>
           </div>
 
