工作台的TAB划分
增加一个提示说明T+1日

--- a/工作台-合作消息.html
+++ b/工作台-合作消息.html
@@ -571,7 +571,7 @@
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u1600" class="ax_default" data-left="492" data-top="296" data-width="1309" data-height="44">
+        <div id="u1600" class="ax_default" data-left="492" data-top="296" data-width="1338" data-height="44">
 
           <!-- Unnamed (水平线) -->
           <div id="u1601" class="ax_default line">
@@ -640,13 +640,13 @@
           </div>
 
           <!-- Unnamed (组合 ) -->
-          <div id="u1613" class="ax_default" data-left="1730" data-top="299" data-width="71" data-height="41">
+          <div id="u1613" class="ax_default" data-left="1721" data-top="299" data-width="109" data-height="41">
 
             <!-- Unnamed (矩形) -->
             <div id="u1614" class="ax_default paragraph">
               <div id="u1614_div" class=""></div>
               <div id="u1614_text" class="text ">
-                <p><span>暂停/解除</span></p>
+                <p><span>合作/暂停/解除</span></p>
               </div>
             </div>
 
@@ -728,7 +728,7 @@
           <div id="u1626" class="ax_default box_1">
             <div id="u1626_div" class=""></div>
             <div id="u1626_text" class="text ">
-              <p><span>对手方信息</span></p>
+              <p><span>换量方信息</span></p>
             </div>
           </div>
         </div>
@@ -896,6 +896,14 @@
         <div id="u1651_div" class=""></div>
         <div id="u1651_text" class="text ">
           <p><span>暂停&amp;解除（11）</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1652" class="ax_default box_1">
+        <img id="u1652_img" class="img " src="images/工作台-合作消息/u1652.png"/>
+        <div id="u1652_text" class="text ">
+          <p><span>（双方第一次审核通过后，T+1日10:00正式开始换量）</span></p>
         </div>
       </div>
     </div>
