--- a/应用数据报表（欺诈报表）.html
+++ b/应用数据报表（欺诈报表）.html
@@ -256,7 +256,7 @@
           <div id="u1134" class="ax_default box_1">
             <div id="u1134_div" class=""></div>
             <div id="u1134_text" class="text ">
-              <p><span style="font-family:'PingFang SC Regular', 'PingFang SC';">今日请求量&nbsp; &nbsp; </span><span style="font-family:'Arial Normal', 'Arial';">7,423</span></p>
+              <p><span style="font-family:'PingFangSC-Regular', 'PingFang SC';">今日请求量&nbsp; &nbsp; </span><span style="font-family:'Arial Normal', 'Arial';">7,423</span></p>
             </div>
           </div>
 
@@ -340,7 +340,7 @@
           <div id="u1148" class="ax_default box_1">
             <div id="u1148_div" class=""></div>
             <div id="u1148_text" class="text ">
-              <p><span style="font-family:'PingFang SC Regular', 'PingFang SC';">今日请求量&nbsp; &nbsp; </span><span style="font-family:'Arial Normal', 'Arial';">7,423</span></p>
+              <p><span style="font-family:'PingFangSC-Regular', 'PingFang SC';">今日请求量&nbsp; &nbsp; </span><span style="font-family:'Arial Normal', 'Arial';">7,423</span></p>
             </div>
           </div>
 
@@ -424,7 +424,7 @@
           <div id="u1162" class="ax_default box_1">
             <div id="u1162_div" class=""></div>
             <div id="u1162_text" class="text ">
-              <p><span style="font-family:'PingFang SC Regular', 'PingFang SC';">今日请求量&nbsp; &nbsp; </span><span style="font-family:'Arial Normal', 'Arial';">7,423</span></p>
+              <p><span style="font-family:'PingFangSC-Regular', 'PingFang SC';">今日请求量&nbsp; &nbsp; </span><span style="font-family:'Arial Normal', 'Arial';">7,423</span></p>
             </div>
           </div>
 
