--- a/工作台-合作消息.html
+++ b/工作台-合作消息.html
@@ -414,7 +414,7 @@
               <div id="u1567" class="ax_default shape">
                 <div id="u1567_div" class=""></div>
                 <div id="u1567_text" class="text ">
-                  <p><span>泡泡车</span></p>
+                  <p><span>泡泡车（6）</span></p>
                 </div>
               </div>
             </div>
@@ -488,7 +488,7 @@
                   <div id="u1584" class="ax_default shape">
                     <div id="u1584_div" class=""></div>
                     <div id="u1584_text" class="text ">
-                      <p><span>&nbsp;&nbsp; &nbsp; 首页banner</span></p>
+                      <p><span>&nbsp;&nbsp; &nbsp; 首页banner（2）</span></p>
                     </div>
                   </div>
                 </div>
@@ -516,7 +516,7 @@
                   <div id="u1590" class="ax_default shape">
                     <div id="u1590_div" class=""></div>
                     <div id="u1590_text" class="text ">
-                      <p><span>&nbsp;&nbsp; &nbsp; 广告位3</span></p>
+                      <p><span>&nbsp;&nbsp; &nbsp; 广告位3（1）</span></p>
                     </div>
                   </div>
                 </div>
@@ -544,7 +544,7 @@
                   <div id="u1596" class="ax_default shape">
                     <div id="u1596_div" class=""></div>
                     <div id="u1596_text" class="text ">
-                      <p><span>&nbsp;&nbsp; &nbsp; 广告位2</span></p>
+                      <p><span>&nbsp;&nbsp; &nbsp; 广告位2（3）</span></p>
                     </div>
                   </div>
                 </div>
@@ -555,7 +555,7 @@
       </div>
 
       <!-- 流程进度 (组合 ) -->
-      <div id="u1597" class="ax_default" data-label="流程进度" data-left="424" data-top="216" data-width="1472" data-height="212">
+      <div id="u1597" class="ax_default" data-label="流程进度" data-left="424" data-top="270" data-width="1472" data-height="212">
 
         <!-- Unnamed (形状) -->
         <div id="u1598" class="ax_default box_1">
@@ -571,7 +571,7 @@
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u1600" class="ax_default" data-left="492" data-top="296" data-width="1338" data-height="44">
+        <div id="u1600" class="ax_default" data-left="492" data-top="350" data-width="1338" data-height="44">
 
           <!-- Unnamed (水平线) -->
           <div id="u1601" class="ax_default line">
@@ -584,7 +584,7 @@
           </div>
 
           <!-- Unnamed (组合 ) -->
-          <div id="u1603" class="ax_default" data-left="1339" data-top="299" data-width="81" data-height="41">
+          <div id="u1603" class="ax_default" data-left="1339" data-top="353" data-width="81" data-height="41">
 
             <!-- Unnamed (矩形) -->
             <div id="u1604" class="ax_default paragraph">
@@ -601,7 +601,7 @@
           </div>
 
           <!-- Unnamed (组合 ) -->
-          <div id="u1606" class="ax_default" data-left="936" data-top="296" data-width="81" data-height="44">
+          <div id="u1606" class="ax_default" data-left="936" data-top="350" data-width="81" data-height="44">
 
             <!-- Unnamed (矩形) -->
             <div id="u1607" class="ax_default paragraph">
@@ -618,7 +618,7 @@
           </div>
 
           <!-- Unnamed (组合 ) -->
-          <div id="u1609" class="ax_default" data-left="492" data-top="299" data-width="65" data-height="41">
+          <div id="u1609" class="ax_default" data-left="492" data-top="353" data-width="65" data-height="41">
 
             <!-- Unnamed (椭圆形) -->
             <div id="u1610" class="ax_default shape">
@@ -640,7 +640,7 @@
           </div>
 
           <!-- Unnamed (组合 ) -->
-          <div id="u1613" class="ax_default" data-left="1721" data-top="299" data-width="109" data-height="41">
+          <div id="u1613" class="ax_default" data-left="1721" data-top="353" data-width="109" data-height="41">
 
             <!-- Unnamed (矩形) -->
             <div id="u1614" class="ax_default paragraph">
@@ -658,7 +658,7 @@
         </div>
 
         <!-- title (组合 ) -->
-        <div id="u1616" class="ax_default" data-label="title" data-left="424" data-top="216" data-width="1472" data-height="55">
+        <div id="u1616" class="ax_default" data-label="title" data-left="424" data-top="270" data-width="1472" data-height="55">
 
           <!-- Unnamed (矩形) -->
           <div id="u1617" class="ax_default box_1">
@@ -671,10 +671,10 @@
       </div>
 
       <!-- 历史消息 (组合 ) -->
-      <div id="u1618" class="ax_default" data-label="历史消息" data-left="424" data-top="1278" data-width="1472" data-height="331">
+      <div id="u1618" class="ax_default" data-label="历史消息" data-left="424" data-top="1332" data-width="1472" data-height="331">
 
         <!-- Unnamed (组合 ) -->
-        <div id="u1619" class="ax_default" data-left="424" data-top="1278" data-width="1472" data-height="55">
+        <div id="u1619" class="ax_default" data-left="424" data-top="1332" data-width="1472" data-height="55">
 
           <!-- Unnamed (矩形) -->
           <div id="u1620" class="ax_default box_1">
@@ -686,7 +686,7 @@
         </div>
 
         <!-- 文本 (组合 ) -->
-        <div id="u1621" class="ax_default" data-label="文本" data-left="458" data-top="1362" data-width="1391" data-height="247">
+        <div id="u1621" class="ax_default" data-label="文本" data-left="458" data-top="1416" data-width="1391" data-height="247">
 
           <!-- Unnamed (多行文本框) -->
           <div id="u1622" class="ax_default text_area">
@@ -719,10 +719,10 @@
       </div>
 
       <!-- 对手方信息 (组合 ) -->
-      <div id="u1624" class="ax_default" data-label="对手方信息" data-left="424" data-top="407" data-width="1472" data-height="836">
+      <div id="u1624" class="ax_default" data-label="对手方信息" data-left="424" data-top="461" data-width="1472" data-height="836">
 
         <!-- Unnamed (组合 ) -->
-        <div id="u1625" class="ax_default" data-left="424" data-top="407" data-width="1472" data-height="55">
+        <div id="u1625" class="ax_default" data-left="424" data-top="461" data-width="1472" data-height="55">
 
           <!-- Unnamed (矩形) -->
           <div id="u1626" class="ax_default box_1">
@@ -768,13 +768,13 @@
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u1632" class="ax_default" data-left="476" data-top="1139" data-width="104" data-height="104">
+        <div id="u1632" class="ax_default" data-left="476" data-top="1193" data-width="104" data-height="104">
 
           <!-- Unnamed (矩形) -->
           <div id="u1633" class="ax_default box_2">
             <img id="u1633_img" class="img " src="images/工作台-合作消息/u1633.png"/>
             <div id="u1633_text" class="text ">
-              <p><span style="font-family:'Arial Normal', 'Arial';"><br></span></p><p><span style="font-family:'Arial Normal', 'Arial';"><br></span></p><p><span style="font-family:'PingFang SC Regular', 'PingFang SC';"><br></span></p><p><span style="font-family:'PingFang SC Regular', 'PingFang SC';color:rgba(0, 0, 0, 0.427450980392157);">&nbsp;</span></p>
+              <p><span style="font-family:'Arial Normal', 'Arial';"><br></span></p><p><span style="font-family:'Arial Normal', 'Arial';"><br></span></p><p><span style="font-family:'PingFangSC-Regular', 'PingFang SC';"><br></span></p><p><span style="font-family:'PingFangSC-Regular', 'PingFang SC';color:rgba(0, 0, 0, 0.427450980392157);">&nbsp;</span></p>
             </div>
           </div>
 
@@ -793,7 +793,7 @@
         </div>
 
         <!-- Unnamed (组合 ) -->
-        <div id="u1636" class="ax_default" data-left="594" data-top="1162" data-width="511" data-height="56">
+        <div id="u1636" class="ax_default" data-left="594" data-top="1216" data-width="511" data-height="56">
 
           <!-- Unnamed (矩形) -->
           <div id="u1637" class="ax_default heading_1">
@@ -904,6 +904,63 @@
         <img id="u1652_img" class="img " src="images/工作台-合作消息/u1652.png"/>
         <div id="u1652_text" class="text ">
           <p><span>（双方第一次审核通过后，T+1日10:00正式开始换量）</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (组合 ) -->
+      <div id="u1653" class="ax_default" data-left="434" data-top="214" data-width="1462" data-height="46">
+
+        <!-- Unnamed (矩形) -->
+        <div id="u1654" class="ax_default box_2">
+          <div id="u1654_div" class=""></div>
+        </div>
+
+        <!-- Unnamed (组合 ) -->
+        <div id="u1655" class="ax_default" data-left="577" data-top="214" data-width="149" data-height="46">
+
+          <!-- Unnamed (矩形) -->
+          <div id="u1656" class="ax_default box_2">
+            <div id="u1656_div" class=""></div>
+            <div id="u1656_text" class="text ">
+              <p><span>微信（开屏）</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u1657" class="ax_default box_2">
+            <div id="u1657_div" class=""></div>
+            <div id="u1657_text" class="text ">
+              <p><span>32</span></p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Unnamed (组合 ) -->
+        <div id="u1658" class="ax_default" data-left="700" data-top="214" data-width="149" data-height="46">
+
+          <!-- Unnamed (矩形) -->
+          <div id="u1659" class="ax_default box_2">
+            <div id="u1659_div" class=""></div>
+            <div id="u1659_text" class="text ">
+              <p><span>头条（开屏）</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u1660" class="ax_default box_2">
+            <div id="u1660_div" class=""></div>
+            <div id="u1660_text" class="text ">
+              <p><span>32</span></p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u1661" class="ax_default box_2">
+          <div id="u1661_div" class=""></div>
+          <div id="u1661_text" class="text ">
+            <p><span>微信（banner)</span></p>
+          </div>
         </div>
       </div>
     </div>
