--- a/工作台-合作消息.html
+++ b/工作台-合作消息.html
@@ -414,7 +414,7 @@
               <div id="u1567" class="ax_default shape">
                 <div id="u1567_div" class=""></div>
                 <div id="u1567_text" class="text ">
-                  <p><span>泡泡车（6）</span></p>
+                  <p><span>泡泡车（5）</span></p>
                 </div>
               </div>
             </div>
@@ -447,7 +447,7 @@
                     <div id="u1575" class="ax_default shape">
                       <div id="u1575_div" class=""></div>
                       <div id="u1575_text" class="text ">
-                        <p><span>APP2</span></p>
+                        <p><span>APP2（1）</span></p>
                       </div>
                     </div>
                   </div>
@@ -488,7 +488,7 @@
                   <div id="u1584" class="ax_default shape">
                     <div id="u1584_div" class=""></div>
                     <div id="u1584_text" class="text ">
-                      <p><span>&nbsp;&nbsp; &nbsp; 首页banner（2）</span></p>
+                      <p><span>&nbsp;&nbsp; &nbsp; 首页banner（3）</span></p>
                     </div>
                   </div>
                 </div>
@@ -544,7 +544,7 @@
                   <div id="u1596" class="ax_default shape">
                     <div id="u1596_div" class=""></div>
                     <div id="u1596_text" class="text ">
-                      <p><span>&nbsp;&nbsp; &nbsp; 广告位2（3）</span></p>
+                      <p><span>&nbsp;&nbsp; &nbsp; 广告位2（1）</span></p>
                     </div>
                   </div>
                 </div>
