--- a/首页.html
+++ b/首页.html
@@ -397,6 +397,9 @@
             </div>
           </div>
 
+          <!-- Unnamed (矩形) [footnote] -->
+          <div id="u3170_ann" class="annotation"></div>
+
           <!-- Unnamed (矩形) -->
           <div id="u3171" class="ax_default box_1">
             <div id="u3171_div" class=""></div>
