--- a/活动页面（不变）.html
+++ b/活动页面（不变）.html
@@ -25,44 +25,36 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u3327" class="ax_default box_1">
-        <div id="u3327_div" class=""></div>
+      <div id="u3328" class="ax_default box_1">
+        <div id="u3328_div" class=""></div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u3328" class="ax_default paragraph" selectiongroup="breadcrumbs">
-        <div id="u3328_div" class=""></div>
-        <div id="u3328_text" class="text ">
+      <div id="u3329" class="ax_default paragraph" selectiongroup="breadcrumbs">
+        <div id="u3329_div" class=""></div>
+        <div id="u3329_text" class="text ">
           <p><span style="color:rgba(0, 0, 0, 0.447058823529412);">首页&nbsp; </span><span style="color:#1E1E1E;">/&nbsp; 入门指引</span></p>
         </div>
       </div>
 
       <!-- 抬头 (组合 ) -->
-      <div id="u3329" class="ax_default" data-label="抬头" data-left="0" data-top="0" data-width="1920" data-height="133">
+      <div id="u3330" class="ax_default" data-label="抬头" data-left="0" data-top="0" data-width="1920" data-height="133">
 
         <!-- Unnamed (矩形) -->
-        <div id="u3330" class="ax_default box_1">
-          <div id="u3330_div" class=""></div>
+        <div id="u3331" class="ax_default box_1">
+          <div id="u3331_div" class=""></div>
         </div>
 
         <!-- Unnamed (图片 ) -->
-        <div id="u3331" class="ax_default _图片_">
-          <img id="u3331_img" class="img " src="images/交易大厅/u3109.png"/>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u3332" class="ax_default box_1">
-          <img id="u3332_img" class="img " src="images/交易大厅/u3110.png"/>
-          <div id="u3332_text" class="text ">
-            <p><span>交易大厅</span></p>
-          </div>
+        <div id="u3332" class="ax_default _图片_">
+          <img id="u3332_img" class="img " src="images/交易大厅/u3109.png"/>
         </div>
 
         <!-- Unnamed (矩形) -->
         <div id="u3333" class="ax_default box_1">
           <img id="u3333_img" class="img " src="images/交易大厅/u3110.png"/>
           <div id="u3333_text" class="text ">
-            <p><span>产品功能</span></p>
+            <p><span>交易大厅</span></p>
           </div>
         </div>
 
@@ -70,7 +62,7 @@
         <div id="u3334" class="ax_default box_1">
           <img id="u3334_img" class="img " src="images/交易大厅/u3110.png"/>
           <div id="u3334_text" class="text ">
-            <p><span>核心技术</span></p>
+            <p><span>产品功能</span></p>
           </div>
         </div>
 
@@ -78,7 +70,7 @@
         <div id="u3335" class="ax_default box_1">
           <img id="u3335_img" class="img " src="images/交易大厅/u3110.png"/>
           <div id="u3335_text" class="text ">
-            <p><span>合作伙伴</span></p>
+            <p><span>核心技术</span></p>
           </div>
         </div>
 
@@ -86,7 +78,7 @@
         <div id="u3336" class="ax_default box_1">
           <img id="u3336_img" class="img " src="images/交易大厅/u3110.png"/>
           <div id="u3336_text" class="text ">
-            <p><span>文档中心</span></p>
+            <p><span>合作伙伴</span></p>
           </div>
         </div>
 
@@ -94,7 +86,7 @@
         <div id="u3337" class="ax_default box_1">
           <img id="u3337_img" class="img " src="images/交易大厅/u3110.png"/>
           <div id="u3337_text" class="text ">
-            <p><span>关于我们</span></p>
+            <p><span>文档中心</span></p>
           </div>
         </div>
 
@@ -102,15 +94,15 @@
         <div id="u3338" class="ax_default box_1">
           <img id="u3338_img" class="img " src="images/交易大厅/u3110.png"/>
           <div id="u3338_text" class="text ">
-            <p><span>开始体验</span></p>
+            <p><span>关于我们</span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
         <div id="u3339" class="ax_default box_1">
-          <div id="u3339_div" class=""></div>
+          <img id="u3339_img" class="img " src="images/交易大厅/u3110.png"/>
           <div id="u3339_text" class="text ">
-            <p><span>&nbsp;入门指引</span></p>
+            <p><span>开始体验</span></p>
           </div>
         </div>
 
@@ -118,9 +110,22 @@
         <div id="u3340" class="ax_default box_1">
           <div id="u3340_div" class=""></div>
           <div id="u3340_text" class="text ">
+            <p><span>&nbsp;入门指引</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u3341" class="ax_default box_1">
+          <div id="u3341_div" class=""></div>
+          <div id="u3341_text" class="text ">
             <p><span>&nbsp;注册账号</span></p>
           </div>
         </div>
+      </div>
+
+      <!-- Unnamed (占位符) -->
+      <div id="u3342" class="ax_default placeholder">
+        <img id="u3342_img" class="img " src="images/活动页面（不变）/u3342.png"/>
       </div>
     </div>
   </body>
