--- a/登陆注册页.html
+++ b/登陆注册页.html
@@ -28,6 +28,14 @@
       <div id="u3113" class="ax_default _图片_">
         <img id="u3113_img" class="img " src="images/登陆注册页/u3113.png"/>
       </div>
+
+      <!-- Unnamed (热区) -->
+      <div id="u3114" class="ax_default">
+      </div>
+
+      <!-- Unnamed (热区) -->
+      <div id="u3115" class="ax_default">
+      </div>
     </div>
   </body>
 </html>
