--- a/管理员报表（审批进度）.html
+++ b/管理员报表（审批进度）.html
@@ -714,9 +714,12 @@
           <div id="u1825" class="ax_default shape">
             <div id="u1825_div" class=""></div>
             <div id="u1825_text" class="text ">
-              <p><span>2019/12/26 20:00发起了换量</span></p><p><span>2019/12/26 20:00发起了换量</span></p><p><span>2019/12/26 20:00发起了换量</span></p><p><span>2019/12/26 20:00发起了换量</span></p><p><span>2019/12/26 20:00发起了换量</span></p>
+              <p><span>“时间 事件”</span></p><p><span>2019/12/26 20:00发起了换量</span></p><p><span>2019/12/26 20:00发起了换量</span></p><p><span>2019/12/26 20:00发起了换量</span></p><p><span>2019/12/26 20:00发起了换量</span></p>
             </div>
           </div>
+
+          <!-- Unnamed (矩形) [footnote] -->
+          <div id="u1825_ann" class="annotation"></div>
         </div>
       </div>
 
